# superimposition-diffusion

./: .gitignore  LICENSE  README.md  setup.cfg
src/SuperimpositionModel/Models/: IC.py  ModelConfig.py  SEIR.py  SEIS.py  SIR.py  SIS.py  __init__.py
