[metadata]
name = superimposition-diffusion-model
version = 0.0.2
author = Roozbeh Eslami
author_email = eslamiroozbeh@yahoo.com
description = A software package for running diffusion simulations on regular and higher-order networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roozbehes/superimposition-diffusion
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src